syntax = "proto3";
package raft;

// Service for clients to interact with the replicated key-value store
service RaftClient {
  // Add or update a key-value pair
  rpc Put(PutRequest) returns (PutResponse);

  // Retrieve a value by key
  rpc Get(GetRequest) returns (GetResponse);

  // Retrieve a value by key, also returns when not a leader
  rpc GetDebug(GetRequest) returns (GetResponse);
}

// Request to store or update a key-value pair
message PutRequest {
  string key = 1;

  // Optional: absence implies a delete
  optional string value = 2;
}

// Response for a Put request
message PutResponse {
  // Whether the operation succeeded
  bool success = 1;

  // Optional hint of current leaderâ€™s address if request failed
  optional string leader_hint = 2;
}

// Request to retrieve a value by key
message GetRequest {
  string key = 1;
}

// Response for a Get request
message GetResponse {
  // Value associated with the key, null if not found
  optional string value = 1;

  // Optional leader hint if this node is not the leader
  optional string leader_hint = 2;
}
